# podpilot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.agent  Dockerfile.base  Dockerfile.hub  Justfile  README.md  docker-bake.hcl  docker-bake.override.hcl.example  railway.json
.github/scripts/: space.sh
.github/workflows/: agent.yaml  build-apps.yml  build-bases.yml
.sqlx/: query-122ea95301f9c838e23e7c1d1e9c5dd471b3783d3aa5d7e8853dd6caa7d4ea87.json  query-45336d0b42a1f40a226c634c2a26a04d86c902c62335a936ef91080b66a5ded3.json  query-9a5a800faa5ceced15fe04ac04d949c7f8001dd8026fe6e9e847c0e096b40b2b.json  query-a466326b014c16e8a88268ddd53516bc1df8cb3c6b1e56eaf236b24022626f82.json  query-b8b5e8048cf0d79d3f60041535cc7d951bae1025a5e076fd534d56ac8cef5b88.json  query-ccbbe265e73c3f0b41ab81dd833faa779d928d0a91e289ba44b34ed7c0ab0dec.json  query-fe56b05c211472ea4d4b03ac64a701506480eeefdcef176cf3bf50b855ceda39.json
apps/: Dockerfile.base  Dockerfile.compose
apps/a1111/: Dockerfile
apps/comfyui/: Dockerfile
apps/common/: boot.sh
apps/fooocus/: Dockerfile
apps/kohya/: Dockerfile
crates/podpilot-agent/: Cargo.toml  Dockerfile  boot.sh
crates/podpilot-agent/src/: config.rs  gpu.rs  lib.rs  main.rs
crates/podpilot-agent/src/ws/: client.rs
crates/podpilot-common/: Cargo.toml
crates/podpilot-common/src/: formatter.rs  lib.rs  logging.rs
crates/podpilot-common/src/config/: mod.rs
crates/podpilot-common/src/protocol/: messages.rs  mod.rs
crates/podpilot-common/src/rpc/: agent.rs  error.rs  hub.rs  mod.rs  types.rs
crates/podpilot-common/src/types/: agent.rs  gpu.rs  mod.rs
crates/podpilot-hub/: Cargo.toml  Dockerfile
crates/podpilot-hub/src/: app.rs  cli.rs  lib.rs  main.rs  state.rs  tailscale.rs
crates/podpilot-hub/src/api/: client.rs  errors.rs  json.rs
crates/podpilot-hub/src/data/: models.rs
crates/podpilot-hub/src/web/: routes.rs
crates/podpilot-hub/src/ws/: cleanup.rs  handler.rs  heartbeat.rs  mod.rs
crates/podpilot-hub/web/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/podpilot-hub/web/src/: App.css  styles.css
crates/podpilot-hub/web/src/lib/: api.ts
docker/: Dockerfile.base  Dockerfile.hub
docs/: tailscale-acl.json5
migrations/: 20251115040254_create_enums.sql  20251115040315_create_agents_table.sql  20251115040316_create_assets_table.sql  20251115040317_create_models_table.sql  20251115040318_create_agent_models_table.sql  20251117000000_add_agent_tailscale_ip.sql
podpilot-agent/: Cargo.toml  boot.sh
podpilot-agent/src/: main.rs
podpilot-common/: Cargo.toml
podpilot-common/src/: lib.rs  logging.rs
podpilot-common/src/config/: mod.rs
podpilot-hub/: Cargo.toml
podpilot-hub/src/: app.rs  lib.rs  main.rs  signals.rs
podpilot-hub/src/api/: errors.rs  middleware.rs  mod.rs
podpilot-hub/src/data/: models.rs
podpilot-hub/src/web/: mod.rs  routes.rs
podpilot-hub/web/: vite.config.ts
podpilot-hub/web/public/: manifest.json
podpilot-hub/web/src/lib/: api.ts
podpilot-hub/web/src/routes/: index.tsx
scripts/: boot.ts  package.json  tsconfig.json
scripts/lib/: agent.ts  apps.ts  config.ts  download.ts  log-forward.ts  logger.ts  process.ts  tailscale.ts  wait.ts
