[workspace]
members = ["crates/podpilot-hub", "crates/podpilot-agent", "crates/podpilot-common"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "A personal management system for remote, ephemeral GPU instances used for image diffusion tasks on platforms like Vast.ai and Runpod."
authors = ["Xevion <xevion@xevion.dev>"]
categories = ["AI", "Image Generation", "Remote Computing"]
keywords = ["AI", "Image Generation", "Remote Computing"]
documentation = "https://github.com/Xevion/podpilot"
homepage = "https://github.com/Xevion/podpilot"
repository = "https://github.com/Xevion/podpilot"
license = "AGPL-3.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.24"
anyhow = "1.0"
fundu = "2.0"
