[package]
name = "podpilot-agent"
version = "0.2.0"
edition = "2024"

[dependencies]
podpilot-common = { path = "../podpilot-common" }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
axum = { version = "0.8.4", features = ["ws"] }
reqwest = { version = "0.12.23", features = ["json", "socks", "rustls-tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
chrono = "0.4.42"
