[package]
name = "podpilot-agent"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
podpilot-common = { path = "../podpilot-common" }
serde = { workspace = true }
# serde_json = { workspace = true }
tokio = { workspace = true }
# futures = { workspace = true }
axum = { workspace = true, features = ["ws"] }
# reqwest = { workspace = true, features = ["socks", "rustls-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
# chrono = { workspace = true }
