[package]
name = "podpilot-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
fundu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
secrecy = { version = "0.10", features = ["serde"] }
