[package]
name = "podpilot-hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
podpilot-common = { path = "../podpilot-common" }
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
# fundu = { workspace = true }
# futures = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
async-trait = "0.1"
# bitflags = { version = "2.9", features = ["serde"] }
# cookie = "0.18"
dashmap = "6.1"
dotenvy = "0.15"
figment = { version = "0.10", features = ["toml", "env"] }
http = "1.3"
reqwest-middleware = { version = "0.4", features = ["json"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
    "macros",
    "uuid",
] }
thiserror = "2.0"
time = "0.3"
# tl = "0.7"
# url = "2.5"
# governor = "0.10.1"
once_cell = "1.21"
serde_path_to_error = "0.1"
# num-format = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "timeout"] }
rust-embed = { version = "8.0", features = ["debug-embed", "include-exclude"] }
mime_guess = "2.0"
clap = { version = "4.5", features = ["derive"] }
rapidhash = "4.1"
yansi = "1.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
